--- a/_data/main_info.yaml
+++ b/_data/main_info.yaml
@@ -1,9 +1,9 @@
-name: "Martin Saveski"
+name: "Liang Jinggui"
 title: "Assistant Professor, University of Washington"
-email: "msaveski [AT] uw.edu"
+email: "jg.liang.2023 [AT] phdcs.smu.edu.sg"
 profile_pic: "/assets/profile-pics/SU_small.jpg"
-twitter: "https://twitter.com/msaveski"
-linkedin: "https://www.linkedin.com/in/msaveski"
-github: "https://github.com/msaveski"
-google_scholar: "https://scholar.google.com/citations?user=M3D870YAAAAJ&hl=en"
-google_analystics_tracking_id: 'UA-46778883-1'
+# twitter: "https://twitter.com/msaveski"
+# linkedin: "https://www.linkedin.com/in/msaveski"
+# github: "https://github.com/msaveski"
+# google_scholar: "https://scholar.google.com/citations?user=M3D870YAAAAJ&hl=en"
+# google_analystics_tracking_id: 'UA-46778883-1'
