--- a/_data/main_info.yaml
+++ b/_data/main_info.yaml
@@ -1,9 +1,8 @@
-name: "Liang Jinggui"
-title: "Assistant Professor, University of Washington"
-email: "jg.liang.2023 [AT] phdcs.smu.edu.sg"
-profile_pic: "/assets/profile-pics/SU_small.jpg"
-# twitter: "https://twitter.com/msaveski"
-# linkedin: "https://www.linkedin.com/in/msaveski"
-# github: "https://github.com/msaveski"
-# google_scholar: "https://scholar.google.com/citations?user=M3D870YAAAAJ&hl=en"
-# google_analystics_tracking_id: 'UA-46778883-1'
+name: "LIANG Jinggui"
+title: "Ph.D. Student in SMU School of Computing and Information Systems"
+affiliation: "Singapore Management University"
+email: "zouyang2 [AT] nd.edu"
+profile_pic: "/assets/profile-pics/profile.JPG"
+linkedin: "https://www.linkedin.com/in/jinggui-liang-670a37252/"
+github: "https://github.com/liangjinggui"
+google_scholar: "https://scholar.google.com/citations?hl=zh-CN&user=fDjmQw8AAAAJ"
