update personal info

--- a/_data/main_info.yaml
+++ b/_data/main_info.yaml
@@ -1,7 +1,7 @@
 name: "LIANG Jinggui"
 title: "Ph.D. Student in SMU School of Computing and Information Systems"
 affiliation: "Singapore Management University"
-email: "zouyang2 [AT] nd.edu"
+email: "jg.liang.2023 [AT] phdcs.smu.edu.sg"
 profile_pic: "/assets/profile-pics/profile.JPG"
 linkedin: "https://www.linkedin.com/in/jinggui-liang-670a37252/"
 github: "https://github.com/liangjinggui"
