--- a/_data/experience.yaml
+++ b/_data/experience.yaml
@@ -1,61 +1,85 @@
 experiences:
 
-- place: "University of Washington"
-  time: "2023 - now"
-  title: "Assistant Professor"
-  subtitle: "Information School"
-  category: "work"
-
-- place: "Stanford"
-  time: "2020 - 2023"
-  title: "Postdoc"
-  subtitle: "MS&E"
-  category: "work"
-
-- place: "MIT"
-  time: "2014 - 2020"
+- place: "Singapore Management University"
+  time: "2023 - Present"
   title: "Ph.D. Student"
-  subtitle: "Media Lab, Laboratory for Social Machines"
+  subtitle: "Computer Science"
   category: "school"
 
-- place: "Facebook"
-  time: "Summer 2019"
-  title: "Research Scientist, Intern"
-  subtitle: "Core Data Science"
+- place: "Tencent"
+  time: "2022 - 2023"
+  title: "Machine Learning Engineer"
+  subtitle: "WeChat Group"
   category: "work"
 
-- place: "LinkedIn"
-  time: "Summer 2016"
-  title: "Research Scientist, Intern"
-  subtitle: "Experimentation Group"
-  category: "work"
-
-- place: "Amazon"
-  time: "Summer 2014"
-  title: "Machine Learning Scientist, Intern"
-  subtitle: "Scalable Machine Learning Group"
-  category: "work"
-
-- place: "Yahoo! Labs"
-  time: "Feb-Aug 2013"
-  title: "Research Scientist, Intern"
-  subtitle: "Social Media Engagement Group"
-  category: "work"
-
-- place: "EM-DMKM"
-  time: "Sep 2011 – Aug 2013"
+- place: "Beijing University of Posts and Telecommunications"
+  time: "2019 - 2022"
   title: "M.Sc. Student"
-  subtitle: "Masters in Data Mining and Knowledge Management <br/> Year 1: University Pierre et Marie Curie <br/> Year 2: Universitat Politecnica de Catalunya <br/>"
+  subtitle: "Information and Communication Engineering"
   category: "school"
 
-- place: "Jozef Stefan Institute"
-  time: "Jan-Aug 2011"
-  title: "Research Assistant"
-  subtitle: "Department of Knowledge Technologies"
-  category: "work"
-
-- place: "Staffordshire University"
-  time: "2007 - 2010"
+- place: "Beijing University of Posts and Telecommunications"
+  time: "2015 - 2019"
   title: "B.Sc. Student"
-  subtitle: "Computing Science <br/> First Class Honours"
+  subtitle: "Communication Engineering"
   category: "school"
+
+# - place: "University of Washington"
+#   time: "2023 - now"
+#   title: "Assistant Professor"
+#   subtitle: "Information School"
+#   category: "work"
+
+# - place: "Stanford"
+#   time: "2020 - 2023"
+#   title: "Postdoc"
+#   subtitle: "MS&E"
+#   category: "work"
+
+# - place: "MIT"
+#   time: "2014 - 2020"
+#   title: "Ph.D. Student"
+#   subtitle: "Media Lab, Laboratory for Social Machines"
+#   category: "school"
+
+# - place: "Facebook"
+#   time: "Summer 2019"
+#   title: "Research Scientist, Intern"
+#   subtitle: "Core Data Science"
+#   category: "work"
+
+# - place: "LinkedIn"
+#   time: "Summer 2016"
+#   title: "Research Scientist, Intern"
+#   subtitle: "Experimentation Group"
+#   category: "work"
+
+# - place: "Amazon"
+#   time: "Summer 2014"
+#   title: "Machine Learning Scientist, Intern"
+#   subtitle: "Scalable Machine Learning Group"
+#   category: "work"
+
+# - place: "Yahoo! Labs"
+#   time: "Feb-Aug 2013"
+#   title: "Research Scientist, Intern"
+#   subtitle: "Social Media Engagement Group"
+#   category: "work"
+
+# - place: "EM-DMKM"
+#   time: "Sep 2011 – Aug 2013"
+#   title: "M.Sc. Student"
+#   subtitle: "Masters in Data Mining and Knowledge Management <br/> Year 1: University Pierre et Marie Curie <br/> Year 2: Universitat Politecnica de Catalunya <br/>"
+#   category: "school"
+
+# - place: "Jozef Stefan Institute"
+#   time: "Jan-Aug 2011"
+#   title: "Research Assistant"
+#   subtitle: "Department of Knowledge Technologies"
+#   category: "work"
+
+# - place: "Staffordshire University"
+#   time: "2007 - 2010"
+#   title: "B.Sc. Student"
+#   subtitle: "Computing Science <br/> First Class Honours"
+#   category: "school"
