--- a/_data/experience.yaml
+++ b/_data/experience.yaml
@@ -12,13 +12,13 @@ experiences:
   subtitle: "WeChat Group"
   category: "work"
 
-- place: "Beijing Uni. of Posts and Telecom. (BUPT)"
+- place: "Beijing Uni. of Posts and Telecom."
   time: "2019 - 2022"
   title: "M.Sc. Student"
   subtitle: "Information and Communication Engineering"
   category: "school"
 
-- place: "Beijing Uni. of Posts and Telecom. (BUPT)"
+- place: "Beijing Uni. of Posts and Telecom."
   time: "2015 - 2019"
   title: "B.Sc. Student"
   subtitle: "Communication Engineering"
