--- a/_data/main_info.yaml
+++ b/_data/main_info.yaml
@@ -2,7 +2,7 @@ name: "LIANG Jinggui"
 title: "Ph.D. Student in SMU School of Computing and Information Systems"
 affiliation: "Singapore Management University"
 email: "jg.liang.2023 [AT] phdcs.smu.edu.sg"
-profile_pic: "/assets/profile-pics/Daco_5900158.png"
+profile_pic: "/assets/profile-pics/wx-78.jpg"
 linkedin: "https://www.linkedin.com/in/jinggui-liang-670a37252/"
 github: "https://github.com/liangjinggui"
 google_scholar: "https://scholar.google.com/citations?hl=zh-CN&user=fDjmQw8AAAAJ"
